--- a/project/composer.json
+++ b/project/composer.json
@@ -20,8 +20,6 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.3.*",
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.2.*",
         "twig/extensions": "1.0.*",
         "symfony/assetic-bundle": "2.3.*",
         "symfony/swiftmailer-bundle": "2.3.*",
@@ -30,27 +28,34 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
+
+        "braincrafted/bootstrap-bundle": "1.4.2",
+        "craue/formflow-bundle": "2.0.*",
+
+        "doctrine/orm": ">=2.2.3,<2.4-dev",
+        "doctrine/doctrine-bundle": "1.2.*",
+        "doctrine/doctrine-migrations-bundle": "@dev",
+        "doctrine/migrations": "@dev",
+
+        "friendsofsymfony/user-bundle": "1.3.*",
+        "ircmaxell/password-compat": "1.0.*",
+
         "jms/security-extra-bundle": "1.5.1",
         "jms/di-extra-bundle": "1.4.0",
 
-        "friendsofsymfony/user-bundle": "1.3.*",
         "knplabs/knp-paginator-bundle": "2.3.*",
-        "craue/formflow-bundle": "2.0.*",
-        "sonata-project/admin-bundle": "2.2.*@dev",
-        "sonata-project/doctrine-orm-admin-bundle": "2.2.*@dev",
-        "simplethings/entity-audit-bundle": "dev-master",
-        "sonata-project/cache-bundle": "2.1.*@dev",
-        "sonata-project/block-bundle": "2.2.*@dev",
-        "sonata-project/user-bundle": "2.2.*@dev",
-        "sonata-project/easy-extends-bundle": "2.1.*@dev",
-        "sonata-project/intl-bundle": "2.2.*@dev",
-        "ircmaxell/password-compat": "1.0.*",
-
-        "doctrine/doctrine-migrations-bundle": "@dev",
-        "doctrine/migrations": "@dev",
         "raulfraile/ladybug-bundle": "@dev",
 
-        "braincrafted/bootstrap-bundle": "1.4.2",
+        "simplethings/entity-audit-bundle": "dev-master",
+
+        "sonata-project/admin-bundle": "~2.2",
+        "sonata-project/block-bundle": "~2.2",
+        "sonata-project/cache-bundle": "~2.1",
+        "sonata-project/doctrine-orm-admin-bundle": "~2.2",
+        "sonata-project/easy-extends-bundle": "~2.1",
+        "sonata-project/intl-bundle": "~2.2",
+        "sonata-project/user-bundle": "~2.2",
+
         "twitter/bootstrap": "2.3.*",
         "jquery/jquery": "1.9.*"
 
