updating indentation into files

--- a/puppet/manifests/git_config.pp.dist
+++ b/puppet/manifests/git_config.pp.dist
@@ -1,5 +1,6 @@
-class {'git':
-  username           => '',
-  usermail           => '',
-  github_username    => '',
+class {
+    "git" :
+        username        => "",
+        usermail        => "",
+        github_username => "",
 }
