--- a/project/.gitignore
+++ b/project/.gitignore
@@ -1,10 +1,15 @@
-web/bundles/
 app/bootstrap.php.cache
 app/cache/*
 app/logs/*
+app/config/parameters.yml
+bin/
 build/
-vendor
+web/bundles/
+web/css/
+web/js/
+vendor/
 composer.phar
-/app/config/parameters.yml
 .php~
 *.php~
+.DS_Store
+Thumbs.db
