--- a/project/composer.json
+++ b/project/composer.json
@@ -1,22 +1,25 @@
 {
-    "name": "symfony/framework-standard-edition",
+    "name": "symfony-boilerplate/framework-standard-edition",
     "description": "The \"Symfony Standard Edition\" distribution",
+
     "autoload": {
         "psr-0": { "": "src/" }
     },
+
     "repositories": [
         {
             "type": "package",
             "package": {
                 "name": "jquery/jquery",
-                "version": "1.9.1",
+                "version": "1.10.2",
                 "dist": {
-                    "url": "http://code.jquery.com/jquery-1.9.1.js",
+                    "url": "http://code.jquery.com/jquery-1.10.2.js",
                     "type": "file"
                 }
             }
         }
     ],
+
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.3.*",
@@ -29,22 +32,23 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
 
-        "braincrafted/bootstrap-bundle": "1.4.2",
+        "braincrafted/bootstrap-bundle": "~2",
         "craue/formflow-bundle": "2.0.*",
 
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.2.*",
-        "doctrine/doctrine-migrations-bundle": "@dev",
-        "doctrine/migrations": "@dev",
+        "doctrine/orm": "~2.4",
+        "doctrine/doctrine-bundle": "~1.2",
+        "doctrine/migrations": "dev-master",
+        "doctrine/doctrine-migrations-bundle": "dev-master",
 
-        "friendsofsymfony/user-bundle": "1.3.*",
-        "ircmaxell/password-compat": "1.0.*",
+        "friendsofsymfony/user-bundle": "~1.3",
+        "ircmaxell/password-compat": "~1.0",
 
-        "jms/security-extra-bundle": "1.5.1",
-        "jms/di-extra-bundle": "1.4.0",
+        "jms/di-extra-bundle": "~1.4",
+        "jms/security-extra-bundle": "~1.5",
+        "jms/serializer-bundle": "~0.11",
 
-        "knplabs/knp-paginator-bundle": "2.3.*",
-        "raulfraile/ladybug-bundle": "@dev",
+        "knplabs/knp-paginator-bundle": "~2.3",
+        "raulfraile/ladybug-bundle": "~1.0",
 
         "simplethings/entity-audit-bundle": "dev-master",
 
@@ -56,30 +60,36 @@
         "sonata-project/intl-bundle": "~2.2",
         "sonata-project/user-bundle": "~2.2",
 
-        "twitter/bootstrap": "2.3.*",
-        "jquery/jquery": "1.9.*"
+        "twbs/bootstrap": "~3.1",
+        "jquery/jquery": "~1.10"
 
     },
+
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+            "Braincrafted\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::install"
         ],
         "post-update-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+            "Braincrafted\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::install"
         ]
     },
+
     "config": {
         "bin-dir": "bin"
     },
+
     "minimum-stability": "stable",
+
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
@@ -90,6 +100,7 @@
             "dev-master": "2.3-dev"
         }
     },
+
     "preferred-install": "dist",
     "process-timeout": 4000
 }
