updating .gitignore file

--- a/project/.gitignore
+++ b/project/.gitignore
@@ -1,15 +1,27 @@
 app/bootstrap.php.cache
+app/config/parameters.yml
+
 app/cache/*
 app/logs/*
-app/config/parameters.yml
-bin/
-build/
-web/bundles/
-web/css/
-web/js/
-vendor/
+
+bin/*
+build/*
+
+nbproject/*
+/nbproject/*
+
+vendor/*
+
+web/bundles/*
+web/css/*
+web/fonts/*
+web/js/*
+
 composer.phar
+
 .php~
 *.php~
+
 .DS_Store
+
 Thumbs.db
