--- a/project/composer.json
+++ b/project/composer.json
@@ -52,13 +52,16 @@
 
         "simplethings/entity-audit-bundle": "dev-master",
 
-        "sonata-project/admin-bundle": "~2.2",
-        "sonata-project/block-bundle": "~2.2",
+        "sonata-project/admin-bundle": "~2.3@dev",
+        "sonata-project/block-bundle": "~2.2@dev",
+        "sonata-project/core-bundle": "~2.2@dev",
         "sonata-project/cache-bundle": "~2.1",
-        "sonata-project/doctrine-orm-admin-bundle": "~2.2",
-        "sonata-project/easy-extends-bundle": "~2.1",
-        "sonata-project/intl-bundle": "~2.2",
-        "sonata-project/user-bundle": "~2.2",
+        "sonata-project/datagrid-bundle": "~2.2@dev",
+        "sonata-project/doctrine-extensions": "~1@dev",
+        "sonata-project/doctrine-orm-admin-bundle": "~2.3@dev",
+        "sonata-project/easy-extends-bundle": "~2.1@dev",
+        "sonata-project/intl-bundle": "~2.2@dev",
+        "sonata-project/user-bundle": "~2.2@dev",
 
         "twbs/bootstrap": "~3.1",
         "jquery/jquery": "~1.10"
