--- a/project/app/config/routing.yml
+++ b/project/app/config/routing.yml
@@ -1,5 +1,5 @@
 admin:
-    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
     prefix: /admin
 
 _sonata_admin:
@@ -8,21 +8,24 @@ _sonata_admin:
     prefix: /admin
 
 sonata_user:
-    resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
+    resource: "@SonataUserBundle/Resources/config/routing/admin_security.xml"
     prefix: /admin
 
-# app/config/routing.yml
-fos_user_security:
-    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+sonata_user_security:
+    resource: "@SonataUserBundle/Resources/config/routing/sonata_security_1.xml"
 
-fos_user_profile:
-    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
-    prefix: /profile
-
-fos_user_resetting:
-    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+sonata_user_resetting:
+    resource: "@SonataUserBundle/Resources/config/routing/sonata_resetting_1.xml"
     prefix: /resetting
 
-fos_user_change_password:
-    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+sonata_user_profile:
+    resource: "@SonataUserBundle/Resources/config/routing/sonata_profile_1.xml"
+    prefix: /profile
+
+sonata_user_register:
+    resource: "@SonataUserBundle/Resources/config/routing/sonata_registration_1.xml"
+    prefix: /register
+
+sonata_user_change_password:
+    resource: "@SonataUserBundle/Resources/config/routing/sonata_change_password_1.xml"
     prefix: /profile
