adding sonata admin parameters for being customized from the parameters.yml file

--- a/project/app/config/parameters.yml.dist
+++ b/project/app/config/parameters.yml.dist
@@ -13,3 +13,6 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    sonata_admin.title:         Dashboard
+    sonata_admin.logo_title:    bundles/sonataadmin/logo_title.png
