--- a/project/app/config/sonata/sonata_admin.yml
+++ b/project/app/config/sonata/sonata_admin.yml
@@ -15,8 +15,8 @@ sonata_admin:
         # permission related to the objects
         object_permissions: [VIEW, EDIT, DELETE, UNDELETE, OPERATOR, MASTER, OWNER]
 
-    title:      Sonata Admin
-    title_logo: bundles/sonataadmin/logo_title.png
+    title:      %sonata_admin.title%
+    title_logo: %sonata_admin.logo_title%
     options:
         html5_validate: false # does not use html5 validation
         pager_links: 5 # pager max links to display
@@ -35,7 +35,7 @@ sonata_admin:
 
     dashboard:
         blocks:
-            - { position: left, type: sonata.block.service.text, settings: { content: "<div class='panel panel-default'><div class='panel-heading'><h3 class='panel-title'>Welcome!</h3></div><div class='panel-body'>You can customize this dashboard by editing the <code>sonata_admin.yml</code> file. The current dashboard presents the recent items from the NewsBundle and a non-statistical e-commerce information.</div></div>"} }
+            - { position: left, type: sonata.block.service.text, settings: { content: "<div class='panel panel-default'><div class='panel-heading'><h3 class='panel-title'>Welcome!</h3></div><div class='panel-body'>You can customize this dashboard by editing the <code>sonata_admin.yml</code> file. The current dashboard presents the recent items from the NewsBundle and a non-statistical e-commerce information.</div></div>" }}
             - { position: right, type: sonata.block.service.rss, settings: { title: Sonata Project's Feeds, url: http://sonata-project.org/blog/archive.rss, template: SonataAdminBundle:Block:block_rss_dashboard.html.twig }}
 
         groups:
