--- a/project/composer.json
+++ b/project/composer.json
@@ -11,9 +11,9 @@
             "type": "package",
             "package": {
                 "name": "jquery/jquery",
-                "version": "1.10.2",
+                "version": "1.11.2",
                 "dist": {
-                    "url": "http://code.jquery.com/jquery-1.10.2.js",
+                    "url": "http://code.jquery.com/jquery-1.11.2.js",
                     "type": "file"
                 }
             }
@@ -21,60 +21,69 @@
     ],
 
     "require": {
-        "php": ">=5.3.3",
-        "symfony/symfony": "2.3.*",
-        "twig/extensions": "1.0.*",
-        "symfony/assetic-bundle": "2.3.*",
-        "symfony/swiftmailer-bundle": "2.3.*",
-        "symfony/monolog-bundle": "2.3.*",
-        "sensio/distribution-bundle": "2.3.*",
-        "sensio/framework-extra-bundle": "2.3.*",
-        "sensio/generator-bundle": "2.3.*",
+        "php": ">=5.3.9",
+        "symfony/symfony": "2.7.*",
+        "doctrine/orm": "~2.2,>=2.2.3,<2.5",
+        "doctrine/dbal": "<2.5",
+        "doctrine/doctrine-bundle": "~1.4",
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.4",
+        "sensio/distribution-bundle": "~4.0",
+        "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
 
         "braincrafted/bootstrap-bundle": "~2",
         "craue/formflow-bundle": "2.0.*",
 
-        "doctrine/orm": "~2.4",
-        "doctrine/doctrine-bundle": "~1.2",
         "doctrine/migrations": "dev-master",
         "doctrine/doctrine-migrations-bundle": "dev-master",
 
-        "friendsofsymfony/user-bundle": "~1.3",
         "ircmaxell/password-compat": "~1.0",
 
         "jms/di-extra-bundle": "~1.4",
         "jms/security-extra-bundle": "~1.5",
         "jms/serializer-bundle": "~0.11",
 
+        "jquery/jquery": "~1.11",
+
+        "knplabs/knp-menu-bundle": "~2.0",
         "knplabs/knp-paginator-bundle": "~2.3",
+
         "raulfraile/ladybug-bundle": "~1.0",
 
-        "simplethings/entity-audit-bundle": "dev-master",
+        "simplethings/entity-audit-bundle": "~0.5",
 
-        "sonata-project/admin-bundle": "~2.3@dev",
-        "sonata-project/block-bundle": "~2.2@dev",
-        "sonata-project/core-bundle": "~2.2@dev",
-        "sonata-project/cache-bundle": "~2.1",
-        "sonata-project/datagrid-bundle": "~2.2@dev",
-        "sonata-project/doctrine-extensions": "~1@dev",
-        "sonata-project/doctrine-orm-admin-bundle": "~2.3@dev",
-        "sonata-project/easy-extends-bundle": "~2.1@dev",
-        "sonata-project/intl-bundle": "~2.2@dev",
-        "sonata-project/user-bundle": "~2.2@dev",
+        "sonata-project/admin-bundle": "~2.4",
+        "sonata-project/block-bundle": "~2.3",
+        "sonata-project/cache-bundle": "~2.2",
+        "sonata-project/core-bundle": "~2.3",
+        "sonata-project/datagrid-bundle": "~2.2",
+        "sonata-project/doctrine-extensions": "~1",
+        "sonata-project/doctrine-orm-admin-bundle": "~2.4",
+        "sonata-project/easy-extends-bundle": "~2.1",
+        "sonata-project/intl-bundle": "~2.2",
+        "sonata-project/user-bundle": "~2.3",
 
-        "twbs/bootstrap": "~3.1",
-        "jquery/jquery": "~1.10"
+        "twbs/bootstrap": "~3.3"
+    },
 
+    "require-dev": {
+        "sensio/generator-bundle": "~2.3"
     },
 
     "scripts": {
+        "post-root-package-install": [
+            "SymfonyStandard\\Composer::hookRootPackageInstall"
+        ],
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
             "Braincrafted\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::install"
         ],
         "post-update-cmd": [
@@ -83,6 +92,8 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::removeSymfonyStandardFiles",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget",
             "Braincrafted\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::install"
         ]
     },
@@ -91,7 +102,8 @@
         "bin-dir": "bin"
     },
 
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
 
     "extra": {
         "symfony-app-dir": "app",
@@ -100,7 +112,7 @@
             "file": "app/config/parameters.yml"
         },
         "branch-alias": {
-            "dev-master": "2.3-dev"
+            "dev-master": "2.7-dev"
         }
     },
 
