--- a/project/app/config/sonata/sonata_admin.yml
+++ b/project/app/config/sonata/sonata_admin.yml
@@ -22,27 +22,38 @@ sonata_admin:
         pager_links: 5 # pager max links to display
 
     templates:
-        # default global templates
-        # the layout template include javascript/stylesheet to the formatter bundle,
+        # Default Global Templates:
+        # The layout template include javascript/stylesheet to the formatter bundle,
         # if you don't need it use the default one: SonataAdminBundle::standard_layout.html.twig
-        layout:  SonataAdminBundle::standard_layout.html.twig
+        layout:  SonataAdminBundle::layout.html.twig
         ajax:    SonataAdminBundle::ajax_layout.html.twig
 
-        # default value if done set, actions templates, should extends a global templates
+        # Default value if done set, actions templates, should extends a global templates
         list:    SonataAdminBundle:CRUD:list.html.twig
         show:    SonataAdminBundle:CRUD:show.html.twig
         edit:    SonataAdminBundle:CRUD:edit.html.twig
 
     dashboard:
         blocks:
-            - { position: left, type: sonata.block.service.text, settings: { content: "<div class='panel panel-default'><div class='panel-heading'><h3 class='panel-title'>Welcome!</h3></div><div class='panel-body'>You can customize this dashboard by editing the <code>sonata_admin.yml</code> file. The current dashboard presents the recent items from the NewsBundle and a non-statistical e-commerce information.</div></div>" }}
-            - { position: right, type: sonata.block.service.rss, settings: { title: Sonata Project's Feeds, url: http://sonata-project.org/blog/archive.rss, template: SonataAdminBundle:Block:block_rss_dashboard.html.twig }}
+            -
+                position: right
+                type: sonata.block.service.text
+                settings:
+                    content: >
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3>Symfony Boilerplate Dashboard</h3>
+                            </div>
+                            <div class="panel-body">
+                                <p>This brief description may be updated editing the block <code>sonata.block.service.text</code> inside the <code>sonata_admin.yml</code> file.</p>
+                            </div>
+                        </div>
 
         groups:
             sonata.admin.group.administration:
                 label:           sonata_administration
                 label_catalogue: SonataAdminBundle
-                icon:            '<i class="fa fa-cogs"></i>'
+                icon:            "<i class='fa fa-cogs'></i>"
                 items:
                     - sonata.user.admin.user
                     - sonata.user.admin.group
