--- a/project/app/config/config_dev.yml
+++ b/project/app/config/config_dev.yml
@@ -2,8 +2,12 @@ imports:
     - { resource: config.yml }
 
 framework:
-    router:   { resource: "%kernel.root_dir%/config/routing_dev.yml" }
+    router:
+        resource: "%kernel.root_dir%/config/routing_dev.yml"
+        strict_requirements: true
     profiler: { only_exceptions: false }
+    session:
+        save_path: ~
 
 web_profiler:
     toolbar: true
@@ -26,6 +30,6 @@ assetic:
     use_controller: true
 
 raul_fraile_ladybug:
-    theme: modern   # select the theme: base, modern or custom themes
-    expanded: false # true to expand all the variables tree by default
-    silenced: false # true to ignore all ladybug calls
+    theme:      modern  # select the theme: base, modern or custom themes
+    expanded:   false   # true to expand all the variables tree by default
+    silenced:   false   # true to ignore all ladybug calls
