--- a/project/app/config/routing.yml
+++ b/project/app/config/routing.yml
@@ -1,13 +1,4 @@
-admin:
-    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
-    prefix: /admin
-
-_sonata_admin:
-    resource: .
-    type: sonata_admin
-    prefix: /admin
-
-sonata_user:
+soanata_user:
     resource: "@SonataUserBundle/Resources/config/routing/admin_security.xml"
     prefix: /admin
 
@@ -29,3 +20,16 @@ sonata_user_register:
 sonata_user_change_password:
     resource: "@SonataUserBundle/Resources/config/routing/sonata_change_password_1.xml"
     prefix: /profile
+
+sonata_cache_cache:
+    resource: "@SonataCacheBundle/Resources/config/routing/cache.xml"
+    prefix: /
+
+admin:
+    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
